@@ -20,6 +20,7 @@ synaptic (0.62.2) unstable; urgency=low
     - add new "Missing Recommends" default filter
   * common/rpackage.cc:
     - fix code to get candidate origin
+    - support getting the candidate release file name
 
  --
 
